forms prepared for auth

--- a/package.json
+++ b/package.json
@@ -81,6 +81,9 @@
     ]
   },
   "lint-staged": {
+    "**/*.{js,jsx,ts,tsx,json}": [
+      "prettier --write"
+    ],
     "src/**/*.+{js,jsx,ts,tsx,json}": [
       "prettier --write",
       "eslint --fix"
