--- a/.eslintrc
+++ b/.eslintrc
@@ -1,44 +1,53 @@
 {
-	"root": true,
+  "root": true,
   "env": {
     "es6": true,
     "browser": true,
     "node": true
   },
-	"extends": [
-		"eslint:recommended",
-		"plugin:import/errors",
-		"plugin:react/recommended",
-		"plugin:jsx-a11y/recommended",
-		"plugin:react-hooks/recommended",
-		"prettier"
-	],
-	"rules": {
-		"react/prop-types": 0,
-		"react/react-in-jsx-scope": 0,
-		"import/no-unresolved": 0,
-		"no-unused-vars": 0
-	},
-	"plugins": ["react", "react-hooks", "import", "jsx-a11y", "prettier"],
-	"parser": "@typescript-eslint/parser",
-	"parserOptions": {
-		"ecmaVersion": "latest",
-		"sourceType": "module",
-		"ecmaFeatures": {
-			"jsx": true
-		}
-	},
-	"settings": {
-		"react": {
-			"version": "detect"
-		},
-		"import/parsers": {
-			"@typescript-eslint/parser": [".ts", ".tsx"]
-		},
-		"import/resolver": {
-			"typescript": {
-				"alwaysTryTypes": true
-			}
-		}
-	}
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
+  "plugins": [
+    "react",
+    "react-hooks",
+    "import",
+    "@typescript-eslint",
+    "jsx-a11y",
+    "prettier"
+  ],
+  "rules": {
+    "react/prop-types": 0,
+    "react/react-in-jsx-scope": 0,
+    "import/no-unresolved": 0,
+    "no-unused-vars": 0
+  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:import/errors",
+    "plugin:react/recommended",
+    "plugin:jsx-a11y/recommended",
+    "plugin:react-hooks/recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "prettier"
+  ],
+  "settings": {
+    "react": {
+      "version": "detect"
+    },
+    "import/parsers": {
+      "@typescript-eslint/parser": [".ts", ".tsx"]
+    },
+    "import/resolver": {
+      "typescript": {
+        "alwaysTryTypes": true
+      }
+    }
+  }
 }
