--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css}\"",
-    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx,json,css}\" --quiet",
+    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx,json}\" --quiet",
     "prepare": "husky install"
   },
   "dependencies": {
